<resources>
    <string name="app_name">Notification Service</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="title_hint">Notification title</string>
    <string name="text_hint">Notification content</string>
    <string name="frequency_hint">How often to notify (in seconds)</string>
    <string name="times_hint">How many times to notify</string>
</resources>
